# Vita3K

./: .gitmodules  CMakeLists.txt  build_ios_libretro.sh
cmake/toolchain/: ios.cmake
libretro/: CMakeLists.txt  libretro.cpp  libretro.osx.def  libretro_audio.cpp  libretro_audio.h  libretro_boot.cpp  libretro_boot.h  libretro_camera.cpp  libretro_catalog.cpp  libretro_core_options.h  libretro_core_options_intl.h  libretro_core_opts.cpp  libretro_core_opts.h  libretro_extensions.h  libretro_game_boot.cpp  libretro_game_boot.h  libretro_input.cpp  libretro_input.h  libretro_install.cpp  libretro_internal.h  libretro_ios_jit.cpp  libretro_ios_jit.h  libretro_paths.cpp  libretro_paths.h  libretro_savestate.cpp  libretro_stub_sdl.cpp  libretro_stub_sdl.h  libretro_vulkan_context.cpp  libretro_vulkan_context.h
vita3k/: CMakeLists.txt  interface.cpp
vita3k/app/src/: app_init.cpp
vita3k/audio/: CMakeLists.txt
vita3k/audio/include/audio/impl/: libretro_audio.h
vita3k/audio/src/: audio.cpp
vita3k/audio/src/impl/: libretro_audio.cpp
vita3k/config/include/config/: config.h
vita3k/cpu/: CMakeLists.txt
vita3k/cpu/include/cpu/: functions.h
vita3k/cpu/include/cpu/impl/: ir_interpreter_cpu.h
vita3k/cpu/src/: cpu.cpp  dynarmic_cpu.cpp  ir_interpreter_cpu.cpp
vita3k/ctrl/src/: ctrl.cpp
vita3k/display/include/display/: state.h
vita3k/display/src/: display.cpp
vita3k/gui/: CMakeLists.txt
vita3k/gui/src/: app_context_menu.cpp  bgm_player_stub.cpp  imgui_impl_sdl_vulkan.cpp  settings_dialog.cpp  vita3k_update.cpp
vita3k/host/dialog/: CMakeLists.txt
vita3k/host/dialog/src/: filesystem_stub.cpp
vita3k/io/src/: io.cpp
vita3k/kernel/include/kernel/: state.h
vita3k/kernel/src/: thread.cpp
vita3k/mem/include/mem/: functions.h  state.h
vita3k/mem/src/: mem.cpp
vita3k/modules/SceCommonDialog/: SceCommonDialog.cpp
vita3k/modules/SceGxm/: SceGxm.cpp
vita3k/modules/SceIofilemgr/: SceIofilemgr.cpp
vita3k/modules/SceNet/: macos_net_helper.cpp
vita3k/renderer/: CMakeLists.txt
vita3k/renderer/include/renderer/vulkan/: libretro_vulkan_api.h  screen_renderer.h
vita3k/renderer/src/: batch.cpp  sync.cpp
vita3k/renderer/src/texture/: cache.cpp
vita3k/renderer/src/vulkan/: context.cpp  libretro_vulkan_api.cpp  renderer.cpp  screen_filters.cpp  screen_renderer.cpp  surface_cache.cpp  sync_state.cpp  texture.cpp
vita3k/util/src/: logging.cpp
vita3k/vkutil/: CMakeLists.txt
vita3k/vkutil/include/vkutil/: vkutil.h  vma_libretro.h
vita3k/vkutil/src/: objects.cpp  vma_libretro.cpp
